--- a/css/style.css
+++ b/css/style.css
@@ -372,6 +372,65 @@ overflow: hidden;
 	margin-top:-200px;
 	position:relative;
 }
+.banner{
+	margin-top:80px;
+	height:280px;
+}
+.banner-ms{
+	background:url(../images/banner-ms.jpg)no-repeat;
+}
+.banner h1{
+	font-size:62px;
+	color:#fff;
+	font-weight:400;
+	font-family: 'CSP_light';
+	margin-top:70px;
+}
+.grey{
+	background:#f0f0f0;
+}
+.service-inner{
+	padding-top:100px;
+	background:url(../images/ab-shadow.png)no-repeat center top;
+}
+.sidebar h3{
+	font-size:24px;
+	font-family: 'CSP_light';
+	color:#939498;
+	margin-bottom:25px;
+	
+}
+.sidebar ul{
+	margin: 0px 0px 0px 15px;
+}
+.sidebar ul li{
+	margin:12px 0px;
+	padding-right: 60px;
+}
+.sidebar ul li a{
+	color:#939498;
+	font-size:16px;
+	font-family: HelveticaNeueL;
+}
+.s-content{
+	padding-bottom:40px;
+}
+.s-content h3{
+	font-size:24px;
+	font-family: 'CSP_light';
+	color:#199cd2;
+	margin-bottom:25px;
+	text-align:center;
+}
+.s-content p, .s-content ul li{
+	font-size:18px;
+	font-family: HelveticaNeueL;
+	color:#000;
+	line-height:20px;
+	margin-bottom:25px;
+}
+
+
 .bottom{
 	min-height:200px;
 	background:url(../images/a-shadow.png)no-repeat center top;
